hphp/test/zend/good/Zend/tests/class_name_as_scalar_error_003.php
<?php

namespace Foo\Bar {
    class One {
        public function baz($x = static::class) {}
    }
}
?>